Fixed stats page timestamp bug and edited styles for stats page - Fixed timestamps causing tasks without timestamps (pre-2.4.7) to keep the stats page from properly displaying stage boxes - Updated the CSS for stage boxes that indicated unfinished stages where URLs were required to have black text 	- The text should change to be readable when these stages are selected/deselected by admins

--- a/styles/go_stats.css
+++ b/styles/go_stats.css
@@ -234,6 +234,16 @@
 	font-size: 12px !important;
 }
 
+.go_stats_task_status p {
+	margin-top: -4px;
+}
+
+/* This makes up for the space that the border takes up. */
+.go_stats_task_status.future_url p,
+.go_stats_task_status.future_url.completed p {
+	margin-top: -5px;
+}
+
 .go_stats_task_stage_url {
 	cursor: pointer !important;
 }
@@ -248,14 +258,20 @@
 	box-sizing: border-box;
 	border: 1px solid;
 	background-color: #FFF;
+	color: #AAA;
 }
 
 .completed {
 	background-color: #AAA;
 }
 
+.future_url.completed {
+	color: #FFF;
+}
+
 .chosen {
 	background-color: #000;
+	color: #FFF;
 }
 
 .go_stage_does_not_exist {
